Build input-group component.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-borders: #ccc;
+  --border-radius: 30px;
 }
 
 *, *::after, *::before {
@@ -165,13 +167,13 @@ a {
 }
 
 .icon-container {
+  align-items: center;
   background: #f3f9fa;
-  width: 64px;
-  height: 64px;
   border-radius: 100%;
   display: inline-flex;
+  height: 64px;
   justify-content: center;
-  align-items: center;
+  width: 64px;
 }
 
 /* Buttons */
@@ -182,11 +184,11 @@ a {
   cursor: pointer;
   font-size: 1.8rem;
   font-weight: 600;
+  margin: 1rem 0;
   padding: 2rem 3rem;
+  text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
-  text-align: center;
-  margin: 1rem 0;
 }
 
 .btn--primary {
@@ -218,8 +220,8 @@ a {
 
 .btn--outline {
   background: white;
-  color: var(--color-headings);
   border: 2px solid var(--color-headings);
+  color: var(--color-headings);
 }
 
 .btn--outline:hover {
@@ -241,12 +243,28 @@ a {
 /* Inputs */
 
 .input {
-  padding: 1.5rem 5.5rem;
-  border: 1px solid #ccc;
-  border-radius: 30px;
-  outline: 0;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-borders);
   color: var(--color-headings);
   font-size: 2rem;
+  outline: 0;
+  padding: 1.5rem 5.5rem;
+}
+
+.input-group {
+  border: 1px solid var(--color-borders);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+
+.input-group .input {
+  border: none;
+  flex-grow: 1;
+  padding: 1.5rem 1rem;
+}
+
+.input-group .btn {
+  margin: 4px;
 }
 
 ::placeholder {
@@ -258,3 +276,4 @@ a {
     font-size: 1.5rem;
   }
 }
+
