Build collapsible component.

--- a/components/callouts.html
+++ b/components/callouts.html
@@ -6,6 +6,6 @@
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, rerum?
       </p>
     </div>
-    <a href="#" class="btn btn--secondary">GET STARTED</a>
+    <a href="#" class="btn btn--secondary btn--stretched">GET STARTED</a>
   </div>
 </div>
