--- a/css/styles.css
+++ b/css/styles.css
@@ -314,13 +314,15 @@ a {
 /* Cards */
 
 .card {
-  border-radius: 7px;
   box-shadow: 0 0 20px 10px #f3f3f3;
   overflow: visible;
+  border-radius: 7px;
 }
 
 .card__header, .card__body {
   padding: 2rem 3rem;
+  border-radius: 7px 7px 0 0;
+
 }
 
 .card--primary .card__header {
@@ -333,6 +335,10 @@ a {
   color: white;
 }
 
+.card--primary .badge--primary {
+  background: #126de4;
+
+}
 .card--secondary .badge--secondary {
   background: #02cdf1;
 
@@ -340,6 +346,9 @@ a {
 
 /* Plans */
 
+.plan {
+  transition: transform 0.2s ease-out;
+}
 .plan__name {
   color: white;
   margin: 0;
@@ -369,6 +378,10 @@ a {
   margin-bottom: 2rem;
 }
 
+.plan--popular {
+  transform: scale(1.1);
+}
+
 .plan--popular .card__header {
   position: relative;
 }
@@ -380,6 +393,14 @@ a {
   position: absolute;
   top: -6px;
   right: 5%;
+}
+
+.plan:hover {
+  transform: scale(1.05);
+}
+
+.plan--popular:hover {
+  transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -745,3 +766,20 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
 }
+
+/* Plans Block */
+
+.block-plans .grid {
+  gap: 8rem 4rem;
+}
+
+.block-plans .card {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+
+
+
+
+
