--- a/css/styles.css
+++ b/css/styles.css
@@ -778,6 +778,29 @@ a {
   margin: 0 auto;
 }
 
+/* Features Block */
+
+.feature {
+  gap: 4rem 2rem;
+  margin: 12rem 0;
+}
+.feature__heading {
+  margin: 1rem 0;
+}
+
+.feature__image {
+  width: 100%;
+}
+.feature:first-of-type {
+  margin-top: 6rem;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-last-of-type(even) .feature__content {
+    order: 2;
+  }
+}
+
 
 
 
