--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@
 
 /* Typography */
 
+::selection {
+  background:var(--color-primary);
+  color: white;
+}
 html {
   font-size: 62.5%;
 
@@ -47,6 +51,7 @@ h2 {
 
 h3 {
   font-size: 3rem;
+  font-weight: 500;
 }
 
 p {
@@ -140,7 +145,6 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -151,6 +155,7 @@ a {
 .list--tick {
   list-style-image: url(../images/tick.svg);
   padding-left:  3rem;
+  color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -425,6 +430,7 @@ a {
 
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__title {
@@ -634,18 +640,20 @@ a {
   color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1, 
+.block--dark h2,
+.block--dark h3 {
   color: white;
 }
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 /* Nav Bars */
@@ -714,10 +722,6 @@ a {
 
 /* Hero */
 
-.hero {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-
-}
 .hero__tagline {
   font-size: 2rem;
   color: #b9c3cf;
@@ -800,6 +804,39 @@ a {
     order: 2;
   }
 }
+
+/* Showcase Block */
+
+.block-showcase__image > img {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+
+  .block-showcase .grid {
+    grid-template-columns: 50% 50%;
+  }
+
+  .block-showcase__image {
+    justify-self: end;
+  }
+
+  .block-showcase__image > img {
+    width: auto;
+    max-width: 700px;
+  }
+
+}
+
+/* TODO:
+
+put right icons on Showcase Block which don't work so need to find out why!
+
+*/
+
+
+
+
 
 
 
