--- a/components/collapsibles.html
+++ b/components/collapsibles.html
@@ -1,7 +1,10 @@
 <div class="collapsible collapsible--expanded">
   <header class="collapsible__header">
     <h2 class="collapsible__heading">Item 1</h2>
-    <span class="icon--chevron collapsible__chevron"> </span>
+    <svg class="icon icon--white">
+      <use xlink:href="images/sprite.svg#chevron"></use>
+    </svg>
+  </span>
   </header>
   <div class="collapsible__content">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magni.
