--- a/css/styles.css
+++ b/css/styles.css
@@ -593,12 +593,6 @@ a {
   font-size: 3rem;
 }
 
-.icon--chevron {
-  content: url(../images/chevron.svg);
-  height: 40px;
-  width: 40px;
-}
-
 .collapsible__chevron {
   transform: rotate(-90deg);
   transition: transform 0.3s;
@@ -633,6 +627,7 @@ a {
 
 .block__heading {
   margin-top: 0;
+  margin-bottom: 5rem;
 }
 
 .block--dark {
@@ -828,11 +823,6 @@ a {
 
 }
 
-/* TODO:
-
-put right icons on Showcase Block which don't work so need to find out why!
-
-*/
 
 
 
